add name and date

--- a/week_02/pig_latin.html
+++ b/week_02/pig_latin.html
@@ -1,4 +1,5 @@
 <script>
+//@author michael nomura <mnnomura@gmail.com> 1.15.2018
 
 //prompt user to input 
 var sentence = prompt('Input word or sentence');
