Add filter assignment

--- a/week_05/robo-dealer.html
+++ b/week_05/robo-dealer.html
@@ -126,7 +126,8 @@ function dealThreeCards(deckOfCards){
         hand[1].value + 
         hand[2].value;
     
-    if(totalCards>21){
+    if(totalCards > 21)
+    {
         result = 'Lose';
     }else{
         result = 'Win';
@@ -151,4 +152,4 @@ $(document).ready(function(){
     });
 });
     
-    </script>
+</script>
