Add error message

--- a/week_08/index.html
+++ b/week_08/index.html
@@ -79,7 +79,7 @@ $(document).ready(function(){
 
                 } else {
                     // request failed
-                    $("#message").html("Request Failed");
+                    $("#message").html("Request Failed, try again later");
                 }
             });
             $("#message").html("Success");
